force-app/main/default/objects/Event__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>New york</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>San fransico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>