force-app/main/default/objects/Event__c/fields/Max_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Max_Registrations__c</fullName>
    <label>Max Registrations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>