force-app/main/default/objects/Event__c/fields/One_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>One_Day_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Day Event</label>
    <type>Checkbox</type>
</CustomField>