force-app/main/default/objects/Event__c/validationRules/End_Date_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Blank</fullName>
    <active>true</active>
    <description>if event is not one day event end date cannot be blank</description>
    <errorConditionFormula>(One_Day_Event__c == TRUE &amp;&amp; NOT(ISBLANK(End_Date__c ))  || 
(One_Day_Event__c == False &amp;&amp; ISBLANK(End_Date__c )))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date should be populated when the event is not for one day</errorMessage>
</ValidationRule>